Changed rating text color to match background

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             </form>
                         </nav>
                     </div>
-                    <div class="card-body text-primary">
+                    <div class="card-body text-danger">
                         <div id="buttonInsert" class="card-title">
                             <button class='movieBtn btn btn-outline-danger btn-lg' data-name="Chuck Norris">Chuck
                                 Norris</button>
